correcting leech image and middle image alignment for mobile compatbility

--- a/css/style.css
+++ b/css/style.css
@@ -3876,6 +3876,7 @@ background-image: linear-gradient(45deg, #56c388 0%, #70ea26 100%);
   .single_feature_img {
     text-align: center;
     margin: 30px 0 0;
+      margin-top: -50%;
   }
 }
 
